src/opt/tests/snapshots/constant__basic.snap
---
created: "2019-03-31T07:18:49.720038800Z"
creator: insta@0.7.1
source: src/opt/tests/constant.rs
expression: "\n    (typeof (1 + 1 + 1 + 1));\n"
---
<dead> = 1
<dead> = 1
<dead> = 2
<dead> = 1
<dead> = 3
<dead> = 1
<dead> = 4
<dead> = "number"
