src/opt/tests/snapshots/constant__dead_if.snap
---
created: "2019-03-31T07:18:49.720038800Z"
creator: insta@0.7.1
source: src/opt/tests/constant.rs
expression: "\n    if (true) good;\n    else bad;\n    if (0) bad;\n    else good;\n"
---
<dead> = true
<dead> = <global good>
<dead> = 0
<dead> = <global good>
