src/opt/tests/snapshots/constant__nan_and_undefined_magic_globals.snap
---
created: "2019-04-04T19:26:26.168862Z"
creator: insta@0.7.1
source: src/opt/tests/constant.rs
expression: "\n    g1 = NaN;\n    g2 = undefined;\n    {\n        let NaN = 1;\n        let undefined = 2;\n        g3 = NaN;\n        g4 = undefined;\n    }\n"
---
_val = +NaN
<global g1> <- _val
<dead> = _val
_val$1 = <void>
<global g2> <- _val$1
<dead> = _val$1
_ini = 1
NaN <= _ini
_ini$1 = 2
undefined <= _ini$1
_val$2 = *NaN
<global g3> <- _val$2
<dead> = _val$2
_val$3 = *undefined
<global g4> <- _val$3
<dead> = _val$3
