src/opt/tests/snapshots/constant__precompute.snap
---
created: "2019-04-09T17:20:29.104117400Z"
creator: insta@0.7.1
source: src/opt/tests/constant.rs
expression: "\n    x = 1 + 1 + 1 + 1;\n    y = \"foo\" + \" \" + \"bar\";\n"
---
_val = 4
<global x> <- _val
_val$1 = "foo bar"
<global y> <- _val$1
